2008-11-25  Alberto Garcia  <agarcia@igalia.com>

	* src/main.c (main): Call dbus_g_thread_init() if we have DBUS
	support, even if the "Set IM status" feature is not enabled.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/imstatus.c (usercfg_changed_cb): Don't do anything if the IM
	configuration hasn't changed.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/imstatus.h
	* src/imstatus.c (im_set_status_idle, usercfg_changed_cb)
	(player_stopped_cb, track_started_cb, controller_destroyed_cb)
	(im_status_init)
	* src/controller.c (apply_usercfg, controller_audio_started_cb)
	(controller_stop_playing, controller_run_app):
	Manage "Set IM status" using signals.

	* src/Makefile.am: Use imstatus.h only when compiling with "Set IM
	status" support.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_start_playing_cb)
	(controller_stop_playing, controller_run_app)
	* src/dbus.h
	* src/dbus.c (player_stopped_cb, track_started_cb)
	(controller_destroyed_cb, lastfm_dbus_init):
	Manage DBUS status notifications using signals.
	(lastfm_dbus_close): Set dbus_connection to NULL after unref

	* src/Makefile.am: Use only dbus.h when compiling with DBUS
	support.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-tray-icon.h
	* src/vgl-tray-icon.c (usercfg_changed_cb, track_stopped_cb)
	(track_started_cb, icon_destroyed_cb, vgl_tray_icon_create)
	* src/controller.c (apply_usercfg, controller_start_playing_cb)
	(controller_stop_playing, controller_run_app):
	Manage tray icon notifications using signals.

2008-11-22  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.h
	* src/controller.c
	(controller_run_app, vgl_controller_class_init)
	(vgl_controller_init):
	Created new VglController object with the following signals:
	"connected", "disconnected", "track-started", "track-stopped",
	"player-stopped" and "usercfg-changed".
	(apply_usercfg, check_session_thread)
	(controller_audio_started_cb, finish_playing_track)