@@ -700,7 +700,7 @@ create_main_menu(VglMainWindow *w, GtkAccelGroup *accel)
         GtkWidget *play, *stop, *skip, *separ1, *separ2, *separ3;
         GtkWidget *stopafter, *love, *ban, *tag, *dorecomm, *addtopls, *dload;
         GtkWidget *library, *neigh, *loved, *playlist, *recomm, *usertag;
-        GtkWidget *library2, *neigh2, *loved2, *playlist2;
+        GtkWidget *library2, *neigh2, *loved2, *playlist2, *usertag2;
         GtkWidget *managebmk, *addbmk, *bmkartist, *bmktrack, *bmkradio;
         GtkWidget *about;
 #ifdef USE_HILDON_WINDOW
@@ -796,10 +796,12 @@ create_main_menu(VglMainWindow *w, GtkAccelGroup *accel)
         neigh2 = gtk_menu_item_new_with_label(_("Neighbours..."));
         loved2 = gtk_menu_item_new_with_label(_("Loved tracks..."));
         playlist2 = gtk_menu_item_new_with_label(_("Playlist..."));
+        usertag2 = gtk_menu_item_new_with_label(_("Music tagged..."));
         gtk_menu_shell_append(othersub, library2);
         gtk_menu_shell_append(othersub, neigh2);
         gtk_menu_shell_append(othersub, loved2);
         gtk_menu_shell_append(othersub, playlist2);
+        gtk_menu_shell_append(othersub, usertag2);
         g_signal_connect(G_OBJECT(library2), "activate",
                          G_CALLBACK(others_radio_selected),
                          GINT_TO_POINTER(LASTFM_LIBRARY_RADIO));
@@ -812,6 +814,9 @@ create_main_menu(VglMainWindow *w, GtkAccelGroup *accel)
         g_signal_connect(G_OBJECT(playlist2), "activate",
                          G_CALLBACK(others_radio_selected),
                          GINT_TO_POINTER(LASTFM_USERPLAYLIST_RADIO));
+        g_signal_connect(G_OBJECT(usertag2), "activate",
+                         G_CALLBACK(others_radio_selected),
+                         GINT_TO_POINTER(LASTFM_USERTAG_RADIO));
 
         /* Actions */
         actions = GTK_MENU_ITEM(gtk_menu_item_new_with_mnemonic(_("_Actions")));
